// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithLabel Component snapshots should match snapshot 1`] = `
.c1 {
  max-width: 100%;
  font-weight: 500;
  color: #2d3b43;
}

.c2 {
  max-width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  font-family: inherit;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  color: #556269;
}

.c0 > * + * {
  margin-top: 0;
}

<WithLabel__Wrapper
  direction="vertical"
  padding="0"
  renderAs="div"
  stack="0"
>
  <div
    className="Box-jf8k8y-0 c0"
  >
    <WithLabel__Label
      ellipsis={false}
    >
      <div
        className="c1"
      >
        Total WSP
      </div>
    </WithLabel__Label>
    <WithLabel__Content
      ellipsis={false}
    >
      <div
        className="c2"
      >
        EUR 
        <span
          style={
            Object {
              "textDecoration": "line-through",
            }
          }
        >
          15,982.09
        </span>
         
        <span
          style={
            Object {
              "color": "red",
            }
          }
        >
          12,345.67
        </span>
      </div>
    </WithLabel__Content>
  </div>
</WithLabel__Wrapper>
`;

exports[`WithLabel Component snapshots should match snapshot 2`] = `
.c1 {
  max-width: 100%;
  font-weight: 500;
  color: #2d3b43;
}

.c2 {
  max-width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  font-family: inherit;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  color: #556269;
}

.c0 > * + * {
  margin-top: 0;
}

<WithLabel__Wrapper
  direction="vertical"
  padding="0"
  renderAs="div"
  stack="0"
>
  <div
    className="Box-jf8k8y-0 c0"
  >
    <WithLabel__Label
      ellipsis={false}
    >
      <div
        className="c1"
      >
        Pieces
      </div>
    </WithLabel__Label>
    <WithLabel__Content
      ellipsis={false}
    >
      <div
        className="c2"
      >
        0
      </div>
    </WithLabel__Content>
  </div>
</WithLabel__Wrapper>
`;

exports[`WithLabel Component snapshots should match snapshot 3`] = `
.c1 {
  max-width: 100%;
  font-weight: 500;
  color: #2d3b43;
}

.c2 {
  max-width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  font-family: inherit;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.4285714285714286;
  color: #556269;
}

.c0 > * + * {
  margin-left: 0;
}

.c0 > * {
  width: 50%;
}

<WithLabel__Wrapper
  direction="horizontal"
  padding="0"
  renderAs="div"
  stack="0"
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="Box-jf8k8y-0 c0"
    style={
      Object {
        "width": "300px",
      }
    }
  >
    <WithLabel__Label
      ellipsis={false}
    >
      <div
        className="c1"
      >
        RRP
      </div>
    </WithLabel__Label>
    <WithLabel__Content
      ellipsis={false}
    >
      <div
        className="c2"
      >
        EUR 69.99
      </div>
    </WithLabel__Content>
  </div>
</WithLabel__Wrapper>
`;
